added training
